--- a/mini-pro/project.config.json
+++ b/mini-pro/project.config.json
@@ -1,6 +1,6 @@
 {
   "miniprogramRoot": "./dist",
-  "projectname": "taro-react",
+  "projectname": "HighwayMini",
   "description": "test",
   "appid": "touristappid",
   "setting": {
