--- a/mini-pro/package.json
+++ b/mini-pro/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "taro-react",
+  "name": "test",
   "version": "1.0.0",
   "private": true,
-  "description": "test",
+  "description": "aaa",
   "templateInfo": {
-    "name": "mobx",
+    "name": "default",
     "typescript": true,
     "css": "sass"
   },
@@ -16,6 +16,7 @@
     "build:h5": "taro build --type h5",
     "build:rn": "taro build --type rn",
     "build:qq": "taro build --type qq",
+    "build:jd": "taro build --type jd",
     "build:quickapp": "taro build --type quickapp",
     "dev:weapp": "npm run build:weapp -- --watch",
     "dev:swan": "npm run build:swan -- --watch",
@@ -24,7 +25,9 @@
     "dev:h5": "npm run build:h5 -- --watch",
     "dev:rn": "npm run build:rn -- --watch",
     "dev:qq": "npm run build:qq -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch"
+    "dev:jd": "npm run build:jd -- --watch",
+    "dev:quickapp": "npm run build:quickapp -- --watch",
+    "test": "jest"
   },
   "browserslist": [
     "last 3 versions",
@@ -32,48 +35,54 @@
     "ios >= 8"
   ],
   "author": "",
-  "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "^7.7.7",
-    "@tarojs/components": "3.6.5",
-    "@tarojs/helper": "3.6.5",
-    "@tarojs/plugin-framework-react": "3.6.5",
-    "@tarojs/plugin-platform-alipay": "3.6.5",
-    "@tarojs/plugin-platform-h5": "3.6.5",
-    "@tarojs/plugin-platform-jd": "3.6.5",
-    "@tarojs/plugin-platform-qq": "3.6.5",
-    "@tarojs/plugin-platform-swan": "3.6.5",
-    "@tarojs/plugin-platform-tt": "3.6.5",
-    "@tarojs/plugin-platform-weapp": "3.6.5",
-    "@tarojs/react": "3.6.5",
-    "@tarojs/runtime": "3.6.5",
-    "@tarojs/shared": "3.6.5",
-    "@tarojs/taro": "3.6.5",
-    "mobx": "^4.8.0",
-    "mobx-react": "^6.1.4",
+    "@babel/runtime": "^7.21.5",
+    "@tarojs/components": "3.6.16",
+    "@tarojs/helper": "3.6.16",
+    "@tarojs/plugin-framework-react": "3.6.16",
+    "@tarojs/plugin-platform-alipay": "3.6.16",
+    "@tarojs/plugin-platform-h5": "3.6.16",
+    "@tarojs/plugin-platform-jd": "3.6.16",
+    "@tarojs/plugin-platform-qq": "3.6.16",
+    "@tarojs/plugin-platform-swan": "3.6.16",
+    "@tarojs/plugin-platform-tt": "3.6.16",
+    "@tarojs/plugin-platform-weapp": "3.6.16",
+    "@tarojs/react": "3.6.16",
+    "@tarojs/runtime": "3.6.16",
+    "@tarojs/shared": "3.6.16",
+    "@tarojs/taro": "3.6.16",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "taro-ui": "^3.1.0-beta.4"
+    "react-marquee-slider": "^1.1.5",
+    "taro-ui": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "@tarojs/cli": "3.6.5",
-    "@tarojs/webpack5-runner": "3.6.5",
+    "@tarojs/cli": "3.6.16",
+    "@tarojs/taro-loader": "3.6.16",
+    "@tarojs/test-utils-react": "^0.1.1",
+    "@tarojs/webpack5-runner": "3.6.16",
+    "@types/jest": "^29.3.1",
+    "@types/node": "^18.15.11",
     "@types/react": "^18.0.0",
     "@types/webpack-env": "^1.13.6",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "babel-preset-taro": "3.6.5",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "babel-preset-taro": "3.6.16",
     "eslint": "^8.12.0",
-    "eslint-config-taro": "3.6.5",
+    "eslint-config-taro": "3.6.16",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.18",
     "react-refresh": "^0.11.0",
-    "stylelint": "9.3.0",
-    "typescript": "^4.1.0",
-    "webpack": "5.69.0"
+    "stylelint": "^14.4.0",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
+    "typescript": "^5.1.0",
+    "webpack": "5.78.0"
   }
 }
