--- a/mini-pro/project.tt.json
+++ b/mini-pro/project.tt.json
@@ -1,13 +1,9 @@
 {
   "miniprogramRoot": "./",
-  "projectname": "HighwayMini",
-  "description": "test",
-  "appid": "touristappid",
+  "projectname": "test",
+  "appid": "testAppId",
   "setting": {
-    "urlCheck": true,
     "es6": false,
-    "postcss": false,
     "minified": false
-  },
-  "compileType": "miniprogram"
+  }
 }
